--- a/index.html
+++ b/index.html
@@ -53,6 +53,68 @@
                 </div>
             </div>
             <hr>
+            <!-- top players end -->
+            <!-- top blogs start -->
+            <section class="top-blogs">
+                <h2 class="section-title">
+                    top-blogs
+                </h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-1.png" alt="blog 1">
+                        </div>
+                        <div class="more-info">
+                            <h4 class="blog-name">13 of My Favorite <br> UI/UX Goodies</h4>
+                            <p class="autor-name">
+                                By <a href="#" target="_blank" rel="noopener noreferrer"> Danny Sapio</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-2.png" alt="blog 1">
+                        </div>
+                        <div class="more-info">
+                            <h4 class="blog-name">UI cheat sheet:
+                                list vs grids</h4>
+                            <p class="autor-name">
+                                By <a href="#" target="_blank" rel="noopener noreferrer">Tess Gadd</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-3.png" alt="blog 1">
+                        </div>
+                        <div class="more-info">
+                            <h4 class="blog-name">7 typography tips
+                                for interface design</h4>
+                            <p class="autor-name">
+                                By <a href="#" target="_blank" rel="noopener noreferrer">Jeremiah Lam</a>
+                            </p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-4.png" alt="blog 1">
+                        </div>
+                        <div class="more-info">
+                            <h4 class="blog-name">Your logo is
+                                copied</h4>
+                            <p class="autor-name">
+                                By <a href="#" target="_blank" rel="noopener noreferrer"> Ferdinand Vogler</a>
+                            </p>
+                        </div>
+                    </article>
+                </div>
+            </section>
+            <!-- top blogs end -->
+        </section>
+        <section class="container-2">
+            <h2 class="section-title">
+                Latest Course
+            </h2>
         </section>
     </main>
     <!-- main end -->
