--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- google fonts -->
-
+    <!-- font-awsome fonts -->
+    <script src="https://kit.fontawesome.com/54a75fad29.js" crossorigin="anonymous"></script>
     <!-- css stylesheet -->
     <link rel="stylesheet" href="./style/style.css">
 
@@ -115,6 +115,83 @@
             <h2 class="section-title">
                 Latest Course
             </h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner"><img src="./images/courses/course-1.png" alt=""></div>
+                </div>
+                <div class="course-info">
+                    <h4 class="course-name">React - The Complete Guide 2022</h4>
+                    <p class="author">Reed Krakoff.</p>
+                    <div class="course-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <div class="rating">
+                            <h4>4.5</h4>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-solid fa-clock"></i>
+                            <h4>1:30hr</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner"><img src="./images/courses/course-1.png" alt=""></div>
+                </div>
+                <div class="course-info">
+                    <h4 class="course-name">React - The Complete Guide 2022</h4>
+                    <p class="author">Reed Krakoff.</p>
+                    <div class="course-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <div class="rating">
+                            <h4>4.5</h4>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-solid fa-clock"></i>
+                            <h4>1:30hr</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner"><img src="./images/courses/course-1.png" alt=""></div>
+                </div>
+                <div class="course-info">
+                    <h4 class="course-name">React - The Complete Guide 2022</h4>
+                    <p class="author">Reed Krakoff.</p>
+                    <div class="course-rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <div class="rating">
+                            <h4>4.5</h4>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-solid fa-clock"></i>
+                            <h4>1:30hr</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- main end -->
