--- a/index.html
+++ b/index.html
@@ -111,83 +111,83 @@
             </section>
             <!-- top blogs end -->
         </section>
-        <section class="container-2">
+
+
+        <section class="section-2">
             <h2 class="section-title">
-                Latest Course
+                Latest Courses
             </h2>
-            <div class="courses">
-                <div class="course">
-                    <div class="course-banner"><img src="./images/courses/course-1.png" alt=""></div>
-                </div>
-                <div class="course-info">
-                    <h4 class="course-name">React - The Complete Guide 2022</h4>
-                    <p class="author">Reed Krakoff.</p>
-                    <div class="course-rating">
-                        <div class="stars">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star-half-stroke"></i>
+            <div class="container-2">
+                <div class="card-class-flex">
+                    <div class="card-flex">
+                        <div class="card-cover-image">
+                            <img src="./images/courses/course-1.png" alt="">
                         </div>
-                        <div class="rating">
-                            <h4>4.5</h4>
-                        </div>
-                        <div class="course-duration">
-                            <i class="fa-solid fa-clock"></i>
-                            <h4>1:30hr</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="courses">
-                <div class="course">
-                    <div class="course-banner"><img src="./images/courses/course-1.png" alt=""></div>
-                </div>
-                <div class="course-info">
-                    <h4 class="course-name">React - The Complete Guide 2022</h4>
-                    <p class="author">Reed Krakoff.</p>
-                    <div class="course-rating">
-                        <div class="stars">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star-half-stroke"></i>
-                        </div>
-                        <div class="rating">
-                            <h4>4.5</h4>
-                        </div>
-                        <div class="course-duration">
-                            <i class="fa-solid fa-clock"></i>
-                            <h4>1:30hr</h4>
+                        <div class="info">
+                            <h4 class="course-title">React - The Complete Guide 2022</h4>
+                            <p>Reed Krakoff</p>
+                            <div class="ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <h4>4.5</h4>
+                                <div class="duration">
+                                    <i class="fa-solid fa-clock"></i>
+                                    <h4>1:30h</h4>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="courses">
-                <div class="course">
-                    <div class="course-banner"><img src="./images/courses/course-1.png" alt=""></div>
+
+                <div class="card-class-flex">
+                    <div class="card-flex">
+                        <div class="card-cover-image">
+                            <img src="./images/courses/course-1.png" alt="">
+                        </div>
+                        <div class="info">
+                            <h4 class="course-title">React - The Complete Guide 2022</h4>
+                            <p>Reed Krakoff</p>
+                            <div class="ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <h4>4.5</h4>
+                                <div class="duration">
+                                    <i class="fa-solid fa-clock"></i>
+                                    <h4>1:30h</h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="course-info">
-                    <h4 class="course-name">React - The Complete Guide 2022</h4>
-                    <p class="author">Reed Krakoff.</p>
-                    <div class="course-rating">
-                        <div class="stars">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star-half-stroke"></i>
+
+
+                <div class="card-class-flex">
+                    <div class="card-flex">
+                        <div class="card-cover-image">
+                            <img src="./images/courses/course-1.png" alt="">
                         </div>
-                        <div class="rating">
-                            <h4>4.5</h4>
-                        </div>
-                        <div class="course-duration">
-                            <i class="fa-solid fa-clock"></i>
-                            <h4>1:30hr</h4>
+                        <div class="info">
+                            <h4 class="course-title">React - The Complete Guide 2022</h4>
+                            <p>Reed Krakoff</p>
+                            <div class="ratings">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <h4>4.5</h4>
+                                <div class="duration">
+                                    <i class="fa-solid fa-clock"></i>
+                                    <h4>1:30h</h4>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
