--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
                 <div class="card-class-flex">
                     <div class="card-flex">
                         <div class="card-cover-image">
-                            <img src="./images/courses/course-1.png" alt="">
+                            <img src="./images/courses/course-2.png" alt="">
                         </div>
                         <div class="info">
-                            <h4 class="course-title">React - The Complete Guide 2022</h4>
-                            <p>Reed Krakoff</p>
+                            <h4 class="course-title">Powerpoint 2022</h4>
+                            <p>Walter Scott</p>
                             <div class="ratings">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -171,7 +171,7 @@
                 <div class="card-class-flex">
                     <div class="card-flex">
                         <div class="card-cover-image">
-                            <img src="./images/courses/course-1.png" alt="">
+                            <img src="./images/courses/course-3.png" alt="">
                         </div>
                         <div class="info">
                             <h4 class="course-title">React - The Complete Guide 2022</h4>
