--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,7 @@
     <script src="https://kit.fontawesome.com/54a75fad29.js" crossorigin="anonymous"></script>
     <!-- css stylesheet -->
     <link rel="stylesheet" href="./style/style.css">
-
+    <link rel="shortcut icon" href="./images/icons/logo.png" type="image/x-icon">
     <title>Leaderboard With CSS-3 </title>
 </head>
 
